--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   app:layout_behavior="@string/appbar_scrolling_view_behavior"
-  tools:context="com.levelapp.chopper.MainActivity"
+  tools:context="com.levelapp.choppertest.MainActivity"
   tools:showIn="@layout/activity_main">
 
   <TextView
